# airtunnel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.html  README.md  architecture.html  azure-pipelines.yml  configuration.html  data-store.html  declaration-file-options.html  design.html  development.html  extending.html  genindex.html  index.html  limitations.html  py-modindex.html  pypi-description.rst  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorial.html
.github/ISSUE_TEMPLATE/: feature.md
_sources/: README.rst.txt  configuration.rst.txt  data-store.rst.txt  design.rst.txt  tutorial.rst.txt
_sources/api/: airtunnel.metadata.rst.txt  airtunnel.operators.rst.txt  airtunnel.operators.sql.rst.txt  airtunnel.rst.txt  airtunnel.sensors.rst.txt  modules.rst.txt
_static/css/: airtunnel.css
api/: airtunnel.html  airtunnel.metadata.html  airtunnel.operators.html  airtunnel.operators.sql.html  airtunnel.sensors.html  modules.html
docs/: Makefile  README.rst  architecture.rst  conf.py  data-store.rst  declaration-file-options.rst  design.rst  development.rst  extending.rst  index.rst  limitations.rst  make.bat  tutorial.md  tutorial.rst
docs/_static/assets/: airtunnel-arch.graphml
docs/assets/: airtunnel-arch.graphml
src/airtunnel/: __init__.py  assetio.py  data_asset.py  data_store.py  declaration_store.py  paths.py
src/airtunnel/metadata/: __init__.py  adapter.py  entities.py
src/airtunnel/operators/: __init__.py  archival.py  datachecks.py  ingestion.py  loading.py  transformation.py
src/airtunnel/sensors/: __init__.py  ingestion.py  metadata.py
test/: .coveragerc  conftest.py  docker-entrypoint.sh  environment.yml  test_declaration_store.py  test_utils.py
test/airflow_home/: .gitignore  airflow.template.cfg
test/scripts/: __init__.py
test/scripts/py/: enrollment.py  enrollment_pyspark.py  enrollment_summary.py  programme.py  (+4 more)
test/test_airtunnel/: conftest.py  test_assetio.py  test_assetio_pandas.py  test_assetio_pyspark.py  test_cli_utils.py  test_data_asset.py  test_declaration_store.py  test_testdags.py
(+33 files in other folders)
