[metadata]
name = airtunnel
description = Airtunnel - tame your Airflow
long_description = file: README.md
long_description_content_type = text/markdown
keywords = airflow
maintainer = Joerg Schneider
author = Joerg Schneider
url = http://airtunnel.readthedocs.org
project_urls =
    Source=https://github.com/joerg-schneider/airtunnel
    Tracker=https://github.com/joerg-schneider/airtunnel/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.6, !=3.8
install_requires =
    pandas >= 0.23
    schema >= 0.6
    apache-airflow >= 1.10
    pyarrow >= 0.13

[options.packages.find]
where = src

[options.extras_require]
pyspark =
    pyspark

testing =
    pytest-cov
    pytest
    xlrd
    flake8
    xlwt
    pyspark
docs =
    sphinx >= 2.0.0, < 3

[bdist_wheel]
universal = 1